# oura-discord-notifier

./: .coderabbit.yaml  .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  notify.yml
docs/: review-report.md
src/: __init__.py  advice.py  bot.py  bot_utils.py  chart.py  discord_client.py  formatter.py  main.py  oura_client.py  settings.py
src/cogs/: __init__.py  general.py  health.py  report.py  scheduler.py  settings_cog.py
tests/: conftest.py  test_advice.py  test_bot_utils.py  test_chart.py  test_cogs_general.py  test_cogs_health.py  test_cogs_report.py  test_cogs_scheduler.py  test_cogs_settings.py  test_discord_client.py  test_formatter.py  test_oura_client.py  test_settings.py
