[project]
name = "oura-discord-notifier"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line-length はフォーマッターに任せる
]

[tool.ruff.lint.isort]
known-first-party = ["oura_client", "formatter", "advice", "chart", "settings", "bot_utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
